outputs/tsp_aco-aco/2026-03-08_22-40-33/problem_iter1_response2.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 74
    threshold = np.percentile(heuristics, 70)  Keep top 30%
                                               ^^^^
SyntaxError: invalid syntax
